feat(ui): business timeslots and reservations
